# KDReports

./: .clang-format  .clang-tidy  .clazy  .codespellrc  .gitignore  .gitmodules  .krazy  .pre-commit-config.yaml  .pylintrc  .travis.yml  CMakeLists.txt  CMakePresets.json  Doxyfile  FindKDReports.cmake  INSTALL-bindings.txt  INSTALL-cmake.txt  INSTALL.txt  KDReportsConfig-buildtree.cmake.in  KDReportsConfig.cmake.in  LICENSE.GPL.txt  LICENSE.LGPL.txt  LICENSE.US.txt  LICENSE.txt  README-WASM.md  README-bindings.md  README-commercial.txt  README.md  README.txt  REUSE.toml  appveyor.yml  autogen.py  debian.changelog  debian.control  g++.pri  gen-forward-headers.py  kdchart.pri  kdreports.bat  kdreports.dsc  kdreports.pri  kdreports.pro  (+7 more)
.reuse/: dep5
LICENSES/: LicenseRef-KDAB-KDReports-US.txt  LicenseRef-KDAB-KDReports.txt
autogen/: autogen.py  configure.sh.in
cmake/: ECMGenerateHeaders.cmake  FindKDChart.cmake  InstallLocation.cmake
conan/: README.txt  conanfile.py
deploy/: release-kdreports.sh
distro/: debian.changelog  debian.control  qt5-debian.rules  qt5-kdreports.dsc  qt5-kdreports.spec  qt6-debian.rules  qt6-kdreports.dsc  qt6-kdreports.spec
doc/: CHANGES_1_1.txt  CHANGES_1_2.txt  CHANGES_1_3.txt  CHANGES_1_5.txt  CHANGES_1_6.txt  CHANGES_1_7.txt  CHANGES_1_8.txt  CHANGES_1_9.txt  CHANGES_2_0.txt  (+1 more)
docs/api/: CMakeLists.txt  Doxyfile.cmake  footer.html
examples/: CMakeLists.txt  examples.pri  examples.pro
examples/BigImage/: BigImage.cpp  BigImage.pro  BigImage.qrc  CMakeLists.txt
examples/ChartXML/: CMakeLists.txt  Chart.xml  ChartXML.cpp  ChartXML.pro  ChartXML.qrc
examples/Database/: CMakeLists.txt  Database.cpp  Database.pro
examples/DatabaseXML/: CMakeLists.txt  Database.xml  DatabaseXML.cpp  DatabaseXML.pro  DatabaseXML.qrc
examples/DemoWasm/: CMakeLists.txt  ResultModel.cpp  ResultModel.h  TableModel.cpp  TableModel.h  kdreports.qrc  kdreportswindow.cpp  kdreportswindow.h  kdreportswindow.ui  main.cpp  tools_export.h
examples/DemoWasm/files/: KDReports-Test-NetworkPeripherals.csv  KDReports-Test-PrinterCartridges.csv  MailMerge.xml  PriceList.xml  members.csv
examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.pro
examples/HelloWorldXML/: CMakeLists.txt  HelloWorld.xml  HelloWorldXML.cpp  HelloWorldXML.pro  HelloWorldXML.qrc
examples/Labels/: CMakeLists.txt  Labels.cpp  Labels.pro
examples/Letter/: CMakeLists.txt  Letter.cpp  Letter.pro
examples/LongReport/: CMakeLists.txt  LongReport.cpp  LongReport.pro
examples/LongTextReport/: CMakeLists.txt  LongTextReport.cpp  LongTextReport.pro
examples/MailMergeXML/: CMakeLists.txt  MailMerge.xml  MailMergeXML.cpp  MailMergeXML.pro  MailMergeXML.qrc
examples/PriceList/: CMakeLists.txt  PriceList.cpp  PriceList.pro  PriceList.qrc
examples/PriceListXML/: CMakeLists.txt  PriceList.xml  PriceListXML.cpp  PriceListXML.pro  PriceListXML.qrc
examples/ReferenceReport/: CMakeLists.txt  ChartModel.csv  ReferenceReport.cpp  ReferenceReport.pro  ReferenceReport.qrc  ResultModel.cpp  ResultModel.h
examples/ReportSection/: CMakeLists.txt  ReportSection.cpp  ReportSection.pro
examples/SpreadsheetAutoTable/: CMakeLists.txt  SpreadsheetAutoTable.cpp
examples/cmake_example/: CMakeLists.txt  HelloWorld.cpp
examples/tools/: CMakeLists.txt  TableModel.cpp  TableModel.h  tools.pro  tools_export.h
python/: CMakeLists.txt
python/PyKDReports/: CMakeLists.txt  __init__.py.cmake  glue.cpp  kdreports_global.h  typesystem_kdreports.xml
python/examples/: PriceList.py
python/examples-qt6/: PriceList.py
python/examples-qt6/HelloWorld/: HelloWorld.py
python/examples-qt6/Labels/: Labels.py
python/examples-qt6/PriceList/: PriceList.py  TableModel.py
python/examples/HelloWorld/: HelloWorld.py
python/examples/Labels/: Labels.py
python/examples/PriceList/: PriceList.py  PriceList.qrc  TableModel.py
python/tests/: CMakeLists.txt  config.py.cmake  tst_importModule.py
src/: CMakeLists.txt  KDReportsConfig.cmake.in  src.pro
src/KDReports/: KDReports.h  KDReportsAbstractReportLayout.cpp  KDReportsAbstractReportLayout_p.h  KDReportsAbstractTableElement.cpp  KDReportsAbstractTableElement.h  KDReportsAutoTableElement.cpp  KDReportsAutoTableElement.h  KDReportsCell.cpp  KDReportsCell.h  KDReportsChartElement.cpp  KDReportsChartElement.h  KDReportsChartTextObject.cpp  KDReportsChartTextObject_p.h  KDReportsElement.cpp  KDReportsElement.h  KDReportsElementData_p.h  KDReportsErrorDetails.cpp  KDReportsErrorDetails.h  KDReportsErrorDetails_p.h  KDReportsFontScaler.cpp  KDReportsFontScaler_p.h  KDReportsFrame.cpp  KDReportsFrame.h  KDReportsGlobal.h  KDReportsHLineElement.cpp  KDReportsHLineElement.h  KDReportsHLineTextObject.cpp  KDReportsHLineTextObject_p.h  KDReportsHeader.cpp  KDReportsHeader.h  KDReportsHeader_p.h  KDReportsHtmlElement.cpp  KDReportsHtmlElement.h  KDReportsImageElement.cpp  KDReportsImageElement.h  KDReportsLayoutHelper.cpp  KDReportsLayoutHelper_p.h  KDReportsMainTable.cpp  KDReportsMainTable.h  KDReportsPreviewDialog.cpp  (+38 more)
unittests/: CMakeLists.txt  runTest.bat  unittests.pri  unittests.pro
unittests/ElementCopying/: CMakeLists.txt  ElementCopying.cpp  ElementCopying.pro
unittests/Headers/: CMakeLists.txt  Headers.cpp  Headers.pro  Headers.qrc
unittests/InThread/: CMakeLists.txt  InThread.cpp  InThread.pro  PriceList.xml  resources.qrc
unittests/PageLayout/: CMakeLists.txt  PageLayout.cpp  PageLayout.pro
unittests/SpreadsheetMode/: CMakeLists.txt  SpreadsheetMode.cpp  SpreadsheetMode.pro
unittests/TableBreakingLogic/: CMakeLists.txt  TableBreakingLogic.pro  TableBreakingTest.cpp
unittests/TextDocument/: CMakeLists.txt  TextDocument.cpp  TextDocument.pro
unittests/XmlParser/: CMakeLists.txt  TestXmlElementHandler.cpp  TestXmlElementHandler.h  TestXmlElementHandlerV1.cpp  TestXmlElementHandlerV1.h  XmlParser.cpp  XmlParser.pro  XmlParser.qrc  broken.xml  doc_footer.xml  doc_header.xml  fonts.xml  handler.xml  handlerWithError.xml  htmlid.xml  margins.xml  simple.xml  spreadsheet.xml  tabs.xml  textid.xml  vspaceInHeader.xml  wrongTopElement.xml
(+31 files in other folders)
