set(QT_USE_QTXML TRUE)
set(QT_USE_QTSQL TRUE)
include(${QT_USE_FILE})

remove_definitions(-DQT_NO_CAST_FROM_BYTEARRAY)
remove_definitions(-DQT_NO_CAST_FROM_ASCII)

add_subdirectory(tools)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tools ${CMAKE_CURRENT_SOURCE_DIR}/../src/KDReports ${CMAKE_CURRENT_BINARY_DIR}/../src/KDReports)
add_subdirectory(Letter)
add_subdirectory(Labels)
add_subdirectory(HelloWorld)
add_subdirectory(ReferenceReport)
add_subdirectory(PriceList)
add_subdirectory(Database)
add_subdirectory(HelloWorldXML)
add_subdirectory(PriceListXML)
add_subdirectory(DatabaseXML)
add_subdirectory(LongReport)
add_subdirectory(LongTextReport)
add_subdirectory(BigImage)
add_subdirectory(MailMergeXML)
add_subdirectory(ReportSection)

find_package(KDChart)
if(KDCHART_FOUND)
add_subdirectory(ChartXML)
endif()
